feat: :sparkles: Agrega endpoint para examen de Diseño Web por GET
